objects/ASI_MFM_CAP_OV_Creation_Log__c.object
<CustomObject>
    <fields>
        <fullName>ASI_Brand_Owner_SKU__c</fullName>
        <label>Brand Owner SKU</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_Country__c</fullName>
        <label>Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_ETL_Process_Date__c</fullName>
        <label>ETL Process Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ASI_ETL_Process_Time_Hour__c</fullName>
        <description>Extract hour figure from ETL Process Time, for report filter</description>
        <formula>MID (TEXT ( ASI_ETL_Process_Date__c + (0.0417 * 8)), 12, 5)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ETL Process Time (Hour)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_Invoice_Num_del__c</fullName>
        <label>Invoice Num</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_Item_Id__c</fullName>
        <label>Item Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_CAP_Log_Result_Display_Flag__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Display Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_PO_Line_Found__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PO Line Found</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_PO_Number__c</fullName>
        <label>PO Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_PO_Type__c</fullName>
        <label>PO Type</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_PR_SKU_Found__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PR SKU Found</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_Scan_Id__c</fullName>
        <label>Scan Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>OPEX OV Creation Log</label>
    <nameField>
        <displayFormat>OPEX-{0000}</displayFormat>
        <label>Log Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OPEX OV Creation Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>